# FastHardware

./: Description.md  GITHUB_SETUP.md  README.md  ROADMAP.md  pom.xml  release_notes.md  run-demo.bat
.github/workflows/: maven.yml
docs/: ARCHITECTURE.md  REFERENCE.md
examples/Demo/: pom.xml
examples/Demo/src/main/java/fasthardware/: Demo.java
native/: CMakeLists.txt
native/include/: fasthardware_jni.h
native/src/: fasthardware.cpp  memory_info.cpp  pdh_cpu.cpp  wmi_temperature.cpp
src/main/java/fasthardware/: FastHardware.java  HardwareSnapshot.java
src/main/java/fasthardware/internal/: NativeFastHardware.java
